Fixed Gap problem

--- a/src/components/scss/e-cert.scss
+++ b/src/components/scss/e-cert.scss
@@ -16,7 +16,7 @@ figure {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 
 	$photos: 9;
